added a hamburger button

--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,11 @@
                 <div class="nav-brand">
                     <a href="#" class="text-gray">Blooger</a>
                 </div>
+                <div class="toggle-collapse">
+                    <div class="toggle-icons">
+                        <i class="fas fa-bars"> </i>
+                    </div>
+                </div>
                 <div>
                     <ul class="nav-items">
                         <li class="nav-link">
@@ -53,6 +58,30 @@
 
         <!----------x--------- Navigation -------------x------->
 
+        <!----------------- Main Site Section ----------------->
+
+        <main>
+            <!---- Site Title ---->
+
+            <section class="site-title">
+                <div class="site-background">
+                    <h3>Tours & Travels</h3>
+                    <h1>Amazing Place on Earth</h1>
+                    <button class="btn">Explore</button>
+                </div>
+            </section>
+
+            <!--XX-- Site Title --XX-->
+        </main>
+
+
+        <!-----XX------------ Main Site Section ---------------XX-->
+
+
+
+        <!-- Jquery Library File -->
+        <script src="./js/Jquery3.5.1.min.js"></script>
+        
         <!-- Custom JavaScript File -->
         <script src="./js/main.js"></script>
     </body>
