--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,10 @@
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="./css/all.css">
 
+        <!-- OWL Carousel -->
+        <link rel="stylesheet" href="./css/owl.carousel.min.css">
+        <link rel="stylesheet" href="./css/owl.theme.default.min.css">
+
         <!--Custom Style-->
         <link rel="stylesheet" href="./css/Style.css">
 
@@ -72,6 +76,53 @@
             </section>
 
             <!--XX-- Site Title --XX-->
+
+
+            <!-- ---- Blog Carousel ---- -->
+
+            <section>
+                <div class="blog">
+                    <div class="container">
+                        <div class="owl-carousel owl-theme blog-post">
+                            <div class="blog-content">
+                                <img src="./assets/Blog-post/post-1.jpg" alt="post-1">
+                                <div class="blog-title">
+                                    <h3>London Fashion week's continued the evolution</h3>
+                                    <button class="btn btn-blog">Fashion</button>
+                                    <span>2 minutes</span>
+                                </div>
+                            </div>
+                            <div class="blog-content">
+                                <img src="./assets/Blog-post/post-2.jpg" alt="post-1">
+                                <div class="blog-title">
+                                    <h3>London Fashion week's continued the evolution</h3>
+                                    <button class="btn btn-blog">Fashion</button>
+                                    <span>2 minutes</span>
+                                </div>
+                            </div>
+                            <div class="blog-content">
+                                <img src="./assets/Blog-post/post-3.jpg" alt="post-1">
+                                <div class="blog-title">
+                                    <h3>London Fashion week's continued the evolution</h3>
+                                    <button class="btn btn-blog">Fashion</button>
+                                    <span>2 minutes</span>
+                                </div>
+                            </div>
+                            <div class="blog-content">
+                                <img src="./assets/Blog-post/post-4.png" alt="post-1">
+                                <div class="blog-title">
+                                    <h3>London Fashion week's continued the evolution</h3>
+                                    <button class="btn btn-blog">Fashion</button>
+                                    <span>2 minutes</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- ---- Blog Carousel ---- -->
+
         </main>
 
 
@@ -81,6 +132,9 @@
 
         <!-- Jquery Library File -->
         <script src="./js/Jquery3.5.1.min.js"></script>
+
+        <!--  Owl Carousel -->
+        <script src="./js/owl.carousel.min.js"></script>
         
         <!-- Custom JavaScript File -->
         <script src="./js/main.js"></script>
